data/derived/fa15/progs/unify/prog3441.ml.out
Characters 56-57:
  let fixpoint (f,b) = wwhile (f, f(b) = f(b-1) && f(b) = b);;
                                                          ^
Error: This expression has type int but an expression was expected of type
         int * bool
